style update- student v2 and home page spacing issue on home page

--- a/volume_10/dev/styles/04-layout/_body.scss
+++ b/volume_10/dev/styles/04-layout/_body.scss
@@ -975,7 +975,9 @@ section {
 				margin-top: 60px;
 				& > div:nth-of-type(1){
 					flex: 0 1 671px;
-					margin-top: -14%;
+					// margin-top: -14%;
+
+					margin-top: -30%;
 				}
 				& > div:nth-of-type(2){
 					flex: 0 1 673px;
@@ -996,7 +998,8 @@ section {
 					flex: 0 2 203px;
 				}
 				& > div:nth-of-type(3){
-					margin-top: -20%;
+					// margin-top: -20%;
+					margin-top: -4%;
 					flex: 0 1 335px;
 				}
 				& > div:nth-of-type(4){
@@ -1013,7 +1016,9 @@ section {
 				}
 				& > div:nth-of-type(2){
 					flex: 0 2 783px;
-					margin-top: -45%;
+					// margin-top: -45%;
+
+					margin-top: -38%;
 				}
 			}
 			& > .row-5{
@@ -1036,7 +1041,9 @@ section {
 				}
 				& > div:nth-of-type(3){
 					flex: 0 1 674px;
-					margin-top: -150px;
+					// margin-top: -150px;
+
+					margin-top: -30px;
 				}
 			}
 			& > .row-6{
