--- a/volume_10/dev/styles/06-states/_states.scss
+++ b/volume_10/dev/styles/06-states/_states.scss
@@ -1497,7 +1497,7 @@ header {
 
   & .inner-letter-wrapper-2 {
     @media all and (max-width: 425px) {
-      margin-top: 0;
+      margin-top: 50px;
     }
   }
 }
